--- a/components/account/AccountScreenWithoutFiltersLayout.module.css
+++ b/components/account/AccountScreenWithoutFiltersLayout.module.css
@@ -32,6 +32,6 @@
 			". . search-results-header search-results-header search-results-header search-results-header search-results-header search-results-header search-results-header search-results-header search-results-header search-results-header . ."
 			". . search-results search-results search-results search-results search-results search-results search-results search-results search-results search-results . ."
 			". . search-results-footer search-results-footer search-results-footer search-results-footer search-results-footer search-results-footer search-results-footer search-results-footer search-results-footer search-results-footer . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 	}
 }
