--- a/components/auth/SignInScreenLayout.module.css
+++ b/components/auth/SignInScreenLayout.module.css
@@ -29,6 +29,6 @@
 			". . header header header header header header header header header header . ."
 			". . content content content content content content content content content content . ."
 			". . sign-in-form sign-in-form sign-in-form sign-in-form sign-in-form sign-in-form sign-in-form sign-in-form sign-in-form sign-in-form . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 	}
 }
