--- a/components/contact/ContactScreenLayout.module.css
+++ b/components/contact/ContactScreenLayout.module.css
@@ -29,6 +29,6 @@
 			". . header header header header header header header header header header . ."
 			". . content content content content content content content content content content . ."
 			". . contact-form contact-form contact-form contact-form contact-form contact-form contact-form contact-form contact-form contact-form . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 	}
 }
