--- a/components/home/HomeScreenLayout.module.css
+++ b/components/home/HomeScreenLayout.module.css
@@ -31,7 +31,7 @@
 			". . recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items . ."
 			". . browse-items browse-items browse-items browse-items browse-items browse-items browse-items browse-items browse-items browse-items . ."
 			". . last-updated-items last-updated-items last-updated-items last-updated-items last-updated-items last-updated-items last-updated-items last-updated-items last-updated-items last-updated-items . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 	}
 
 	@media (/* --screen-xl */ min-width: 80rem) {
@@ -39,7 +39,7 @@
 			". . . hero hero hero hero hero hero hero hero . . ."
 			". . recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items recommended-items last-updated-items last-updated-items last-updated-items . ."
 			". . browse-items browse-items browse-items browse-items browse-items browse-items browse-items last-updated-items last-updated-items last-updated-items . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 		grid-template-rows: auto auto 1fr auto;
 	}
 }
