--- a/components/success/SuccessScreenLayout.module.css
+++ b/components/success/SuccessScreenLayout.module.css
@@ -29,6 +29,6 @@
 			". . header header header header header header header header header header . ."
 			". . content content content content content content content content content content . ."
 			". . success-card success-card success-card success-card success-card success-card success-card success-card success-card success-card . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 	}
 }
