--- a/components/terms-of-use/TermsOfUseScreenLayout.module.css
+++ b/components/terms-of-use/TermsOfUseScreenLayout.module.css
@@ -27,6 +27,6 @@
 		grid-template-areas:
 			". . header header header header header header header header header header . ."
 			". . content content content content content content content content content content . ."
-			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . . . .";
+			". . funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice funding-notice . .";
 	}
 }
