--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -20,6 +20,8 @@
 	--text-lg: 1.0625rem; /* 17px */
 	--text-xl: 1.25rem; /* 20px */
 
+	--leading-relaxed: 1.75;
+
 	--color-neutral-0: hsl(0deg 0% 100%); /* #ffffff */
 	--color-neutral-50: hsl(0deg 0% 98%); /* #fafafa */
 	--color-neutral-75: hsl(0deg 0% 96%); /* #f5f5f5 */
@@ -65,6 +67,8 @@
 	--color-notice-600: hsl(35deg 100% 55%); /* #ff9e1a */
 
 	--shadow: 0 3px 6px hsl(0deg 0% 0% / 16%);
+
+	--radius-lg: 7px;
 
 	--animate-fade-in: 150ms forwards fade-in;
 	--animate-slide-in-from-right: 150ms forwards slide-in-from-right;
