--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -19,6 +19,7 @@
 	--text-base: 1rem; /* 16px */
 	--text-lg: 1.0625rem; /* 17px */
 	--text-xl: 1.25rem; /* 20px */
+	--text-2xl: 1.625rem; /* 26px */
 
 	--leading-relaxed: 1.75;
 
